survey-taker-eks/Kubernetes/workload_identity.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${SURVEY_TAKER_NAMESPACE}

# Create kubernets service account
