survey-taker-eks/Kubernetes/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ${SURVEY_TAKER_INGRESSROUTE_NAME}
  namespace: ${SURVEY_TAKER_NAMESPACE}
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`${SURVEY_TAKER_HOST_NAME}`)
      kind: Rule
      middlewares:
        - name: ${SURVEY_TAKER_MIDDLEWARE_NAME}
      services:
        - name: ${SURVEY_TAKER_SERVICE_NAME}
          port: 80
