survey-taker-eks/Kubernetes/working_survey_taker_shorturl_deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${SURVEY_TAKER_NAMESPACE}
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${SURVEY_TAKER_NAMESPACE}
  name: ${SURVEY_TAKER_SHORTURL_DEPLOYMENT_NAME}
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ${SURVEY_TAKER_SHORTURL_APP_NAME}
      namespace: ${SURVEY_TAKER_NAMESPACE}
      alpha.eksctl.io/nodegroup-name: ${SURVEY_TAKER_NODE_GROUP}
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${SURVEY_TAKER_SHORTURL_APP_NAME}
        namespace: ${SURVEY_TAKER_NAMESPACE}
        alpha.eksctl.io/nodegroup-name: ${SURVEY_TAKER_NODE_GROUP}
    spec:
      containers:
      - image: ${SURVEY_TAKER_REPOSITORY}:${TAG}
        imagePullPolicy: Always
        name: ${SURVEY_TAKER_SHORTURL_APP_NAME}
        ports:
        - containerPort: 9000
        resources:
          requests:
            cpu: "325m"
            memory: "500Mi"
          limits:
            cpu: "400m"
            memory: "600Mi"
        volumeMounts:
            - mountPath: /storage
              name: ${SURVEY_TAKER_SHORTURL_VOLUME}
      volumes:
        - name: ${SURVEY_TAKER_SHORTURL_VOLUME}
          persistentVolumeClaim:
            claimName: ${SURVEY_TAKER_PVC}
      nodeSelector:
        "eks.amazonaws.com/nodegroup": ${SURVEY_TAKER_NODE_GROUP} 
---
apiVersion: v1
kind: Service
metadata:
  namespace: ${SURVEY_TAKER_NAMESPACE}
  name: ${SURVEY_TAKER_SHORTURL_SERVICE_NAME}
spec:
  ports:
    - port: 80
      targetPort: 9000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: ${SURVEY_TAKER_SHORTURL_APP_NAME}
    namespace: ${SURVEY_TAKER_NAMESPACE}
    alpha.eksctl.io/nodegroup-name: ${SURVEY_TAKER_NODE_GROUP}

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ${SURVEY_TAKER_SHORTURL_MIDDLEWARE_NAME}
  namespace: ${SURVEY_TAKER_NAMESPACE}
spec:
  headers:
    customResponseHeaders:
      X-XSS-Protection: "1; mode=block"
      Referrer-Policy: "strict-origin-when-cross-origin"
      Permissions-Policy: "geolocation=(self), camera=(self), microphone=(self), autoplay=(self)"
      X-Content-Type-Options: "nosniff"
      X-Frame-Options: "sameorigin"
      X-Permitted-Cross-Domain-Policies: "none"
      Strict-Transport-Security: "max-age=31536000; includeSubdomains; preload"
      Cross-Origin-Embedder-Policy: "unsafe-none"
      Cross-Origin-Opener-Policy: "unsafe-none"
      Cross-Origin-Resource-Policy: "same-origin"
      Cache-Control: "no-cache, no-store, must-revalidate"

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ${SURVEY_TAKER_SHORTURL_INGRESSROUTE_NAME}
  namespace: ${SURVEY_TAKER_NAMESPACE}
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`${SURVEY_TAKER_SHORTURL_HOST_NAME}`)
      kind: Rule
      middlewares:
        - name: ${SURVEY_TAKER_SHORTURL_MIDDLEWARE_NAME}
      services:
        - name: ${SURVEY_TAKER_SHORTURL_SERVICE_NAME}
          port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${TRAEFIK_SERVICE_NAMESPACE}
  name: ${SURVEY_TAKER_SHORTURL_INGRESS_NAME}
  annotations:
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/certificate-arn: ${SURVEY_TAKER_SHORTURL_CERTIFICATE_ARN}
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: ${SURVEY_TAKER_SHORTURL_ALB}
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60
    # alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-east-1:387102133919:regional/webacl/SS_WAF_v2_Prod/df5df1d1-99f5-420a-94e9-50398bd50b4f
    alb.ingress.kubernetes.io/ssl-redirect: "443"
  labels:
    app: ${TRAEFIK_SERVICE_NAMESPACE}
spec:
  ingressClassName: alb
  rules:
    - host: ${SURVEY_TAKER_SHORTURL_HOST_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${TRAEFIK_SERVICE_NAMESPACE}
                port:
                  number: 80
